--- a/public/styles/about.css
+++ b/public/styles/about.css
@@ -1018,7 +1018,7 @@ section
 }
 .jp-state-muted .jp-mute::after
 {
-	content: url(../images/mute_0.png);
+	content: url(../storage/images/mute_0.png);
 }
 .jp-mute:active
 {
@@ -1032,7 +1032,7 @@ section
 	left: 0;
 	width: 100%;
 	height: 100%;
-	content: url(../images/mute_1.png);
+    content: url(../storage/images/mute_1.png);
 }
 .time_controls
 {
