--- a/public/styles/main_styles.css
+++ b/public/styles/main_styles.css
@@ -1041,7 +1041,7 @@ section
 }
 .jp-state-muted .jp-mute::after
 {
-	content: url(../images/mute_0.png);
+	content: url(../storage/images/mute_0.png);
 }
 .jp-mute:active
 {
@@ -1055,7 +1055,7 @@ section
 	left: 0;
 	width: 100%;
 	height: 100%;
-	content: url(../images/mute_1.png);
+	content: url(../storage/images/mute_1.png);
 }
 .time_controls
 {
