--- a/public/styles/single.css
+++ b/public/styles/single.css
@@ -864,7 +864,7 @@ section
 }
 .jp-state-muted .jp-mute::after
 {
-	content: url(../images/mute_0.png);
+    content: url(../storage/images/mute_0.png);
 }
 .jp-mute:active
 {
@@ -878,7 +878,7 @@ section
 	left: 0;
 	width: 100%;
 	height: 100%;
-	content: url(../images/mute_1.png);
+    content: url(../storage/images/mute_1.png);
 }
 .time_controls
 {
