--- a/public/styles/main_styles.css
+++ b/public/styles/main_styles.css
@@ -598,15 +598,24 @@ section
 
 .home
 {
-	width: 100%;
-	height: 892px;
-	padding-left: 51px;
-	padding-right: 52px;
+    margin-top: 102px;
+    width: 100%;
+    height: 892px;
+    padding-left: 51px;
+    padding-right: 52px;
+}
+.album
+{
+    margin-top: 100px;
+    width: 80%;
+    height: 500px;
+    padding-left: 51px;
+    padding-right: 52px;
 }
 .home_slider_container
 {
-	width: 100%;
-	height: 100%;
+    width: 100%;
+    height: 100%;
 }
 .home_slider.owl-theme .owl-nav.disabled + .owl-dots
 {
